JPMS compliance; Use jakarta instead of javax-persistence